# Tsto---Simpsons-Tapped-Out---Private-Server

./: .dockerignore  .gitignore  CMakeLists.txt  Docker Readme.md  Dockerfile  Dockerfile.multistage.24.04  Dockerfile.multistage22.02  Firewall Rules.bat  Linux_Build_Instructions.md  README.md  config.json  deps.txt  docker-compose.yml  extract_for_windows.bat  premake5.lua
PYTHON COMPETITOR/node/: node auth.js
absl patch/: errno_saver.h
cmake/: FindDiscordGameSDK.cmake  FindGlog.cmake  FindLibTomCrypt.cmake  FindLibTomMath.cmake  FindLibZip.cmake  FindLibevent.cmake  FindProtobufWithOptions.cmake  FindSQLite3.cmake
payloads/: boot after login.har  reg_login.har  tutorial_reload.har  tutorial_reload2.har  tutorials.har
source/evpp/: CMakeLists.txt
source/evpp/apps/: CMakeLists.txt
source/evpp/apps/evmc/: CMakeLists.txt
source/evpp/apps/evnsq/: CMakeLists.txt  option.cc
source/evpp/benchmark/http/libevent/: CMakeLists.txt
source/evpp/benchmark/ioevent/libevent/: CMakeLists.txt
source/evpp/benchmark/throughput/libevent/: CMakeLists.txt
source/evpp/evpp/: CMakeLists.txt  libevent.h  logging.h  sockets.cc  tcp_conn.cc  windows_port.h
source/evpp/evpp/http/: context.cc  context.h
source/evpp/evpp/httpc/: url_parser.cc
source/evpp/evpp/udp/: udp_message.h
source/evpp/examples/recipes/self_control_timer/basic_01/: CMakeLists.txt
source/evpp/examples/recipes/self_control_timer/basic_02/: CMakeLists.txt
source/evpp/examples/recipes/self_control_timer/cancel_03/: CMakeLists.txt
source/evpp/examples/recipes/self_control_timer/periodic_04/: CMakeLists.txt
source/server/: app.rc  main.cpp  resource.h  std_include.cpp  std_include.hpp  tsto_server.cpp  tsto_server.hpp
source/server/debugging/: blackbox.cpp  blackbox.hpp  console.cpp  console.hpp  serverlog.cpp  serverlog.hpp
source/server/discord/: discord_rpc.cpp  discord_rpc.hpp
source/server/dispatcher/: dispatcher.cpp  dispatcher.hpp
source/server/file_server/: file_server.cpp  file_server.hpp
source/server/headers/: response_headers.cpp  response_headers.hpp
source/server/networking/: server_startup.cpp  server_startup.hpp
source/server/protobufs/: AuthData.proto  ClientConfigData.pb  ClientConfigData.proto  ClientLog.proto  ClientMetrics.proto  ClientTelemetry.proto  Common.proto  CustomerServiceData.proto  Error.proto  GambleData.proto  GameplayConfigData.proto  GetFriendData.proto  LandData.proto  LandData.proto.bak  MatchmakingData.proto  OffersData.proto  PurchaseData.proto  PurchaseData.proto.bak  WholeLandTokenData.proto
source/server/security/: security.cpp  security.hpp
source/server/static/: town_operations.html  town_operations.js
source/server/statistics/: statistics.cpp
source/server/tsto/auth/: auth.cpp  auth.cpp.old  auth.hpp  auth.hpp.old  auth_new.cpp  auth_new.hpp  login.cpp  login.hpp  token_gen.cpp  token_gen.hpp  user_roles.cpp  user_roles.hpp
source/server/tsto/dashboard/: admin_town_management.cpp  admin_town_management.hpp  dashboard.cpp  dashboard.hpp  dashboard_config.cpp  dashboard_config.hpp  pending_uploads.cpp  pending_uploads.hpp  public_user_search.cpp  public_user_search.hpp  public_users.cpp  public_users.hpp  user_search.cpp  user_search.hpp
source/server/tsto/database/: database.cpp  database.hpp  pending_towns.cpp  pending_towns.hpp  public_users_db.cpp  public_users_db.hpp
source/server/tsto/device/: device.cpp  device.hpp
source/server/tsto/events/: events.cpp  events.hpp
source/server/tsto/friends/: friends.cpp  friends.hpp
source/server/tsto/game/: game.cpp  game.hpp  game_config_cache.hpp
source/server/tsto/includes/: helpers.hpp  server_time.hpp  session.hpp
source/server/tsto/land/: backup.cpp  backup.hpp  land.cpp  land.cpp.old  land.hpp  land.hpp.old  new_land.cpp  new_land.hpp
source/server/tsto/statistics/: statistics.hpp
source/server/tsto/tracking/: tracking.cpp  tracking.hpp
source/server/tsto/user/: user.cpp  user.cpp.old  user.hpp  user_new.cpp  user_new.hpp
source/server/updater/: updater.cpp  updater.hpp
source/utilities/: compression.cpp  compression.hpp  configuration.cpp  configuration.hpp  cryptography.cpp  cryptography.hpp  finally.hpp  flags.cpp  flags.hpp  format.cpp  format.hpp  http.cpp  http.hpp  io.cpp  io.hpp  linux_compat.hpp  memory.cpp  memory.hpp  minidump.cpp  minidump.hpp  nt.cpp  nt.hpp  serialization.hpp  signature.cpp  string.cpp  string.hpp  thread.cpp  thread.hpp  tsto_utils.hpp
webpanel/: access_denied.html  admin_management.html  dashboard.html  game_config.html  login.html  opublic_dashboard.html  public_dashboard.html  public_login.html  public_register.html  public_townuploader.html  town_operations.html  town_operations.js  user_management.html  user_search.html
webpanel/js/: admin_town_management.js  dashboard.js  login.js  lpublic_dashboard.js  opublic_dashboard.js  public_dashboard.js  public_login.js  public_townuploader.js  public_user_search.js  town_operations.js  user_search.js
